src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Contact Center</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales %26 Marketing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Applicable_for_NPS_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field captures, whether the record is applicable for a Transactual NPS Survey. Can be used to filter.</description>
        <inlineHelpText>This field captures, whether the record is applicable for a Transactual NPS Survey. Can be used to filter.</inlineHelpText>
        <label>Applicable for NPS Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Lead Qualification Field (Sales &amp; Marketing)</description>
        <inlineHelpText>Is this project officially funded? Will the opportunity be realised by the end user?</inlineHelpText>
        <label>Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>DMDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCVA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCDv2_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This id will be filled by the CCDv2 system. The ID is used to identify the Lead during searches</description>
        <externalId>true</externalId>
        <inlineHelpText>This id will be filled by the CCDv2 system. The ID is used to identify the Lead during searches</inlineHelpText>
        <label>CCDv2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Capture_Date_Pre_System__c</fullName>
        <description>This field captures the date and time, of the lead object when created in predecessor systems like CCDv2 in order to provide real customer experiences until we contact the customer. The value will be provided by the predecessor system.</description>
        <inlineHelpText>This field captures the date and time, of the lead object when created in predecessor systems like CCDv2 in order to provide real customer experiences until we contact the customer.</inlineHelpText>
        <label>Capture Date Pre System</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Channel class&quot; .
This fields is to be mapped across to the Account field Type (only for Sales &amp; Marketing)</description>
        <inlineHelpText>Channel classification of the Leads.</inlineHelpText>
        <label>Channel Class Level1</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Channel Class Level1. 
This fields is to be mapped across to the Account field Type (only for Sales &amp; Marketing)</description>
        <inlineHelpText>Channel classification of the leads</inlineHelpText>
        <label>Channel Class Level2</label>
        <picklist>
            <controllingField>Channel_Class_Level1__c</controllingField>
            <picklistValues>
                <fullName>ALCEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APBLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class__c</fullName>
        <description>This fields is to be mapped across to the Account field Type (only for Sales &amp; Marketing)</description>
        <label>Channel Class</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALCEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APBLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Center_delegated_Country__c</fullName>
        <description>This field will return the originating country, when the lead has been generated by any contact center process, else it will be empty. This is to support Contact Center global reports</description>
        <formula>IF
(OR
(
   NOT(ISBLANK(CCDv2_Id__c)),
   ISPICKVAL(CreatedBy.Department_Type__c, &quot;Contact_Center&quot;)
),
TEXT(Originating_Country__c),
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will return the originating country, when the lead has been generated by any contact center process</inlineHelpText>
        <label>Contact Center delegated Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Center_delegated__c</fullName>
        <formula>IF(
    AND(
        RecordType.DeveloperName = &quot;Contact_Center&quot;,
        ISPICKVAL(CreatedBy.Department_Type__c, &quot;Contact_Center&quot;),

IF(
    ISBLANK(Owner:Queue.DeveloperName),
    NOT(ISPICKVAL(Owner:User.Department_Type__c, &quot;Contact_Center&quot;)),
AND(
    NOT(CONTAINS(Owner:Queue.DeveloperName, &quot;Contact_Center&quot;)),
    NOT(CONTAINS(Owner:Queue.DeveloperName, &quot;CC&quot;))
    )
),
        TEXT(Originating_Country__c) = $User.Country
),
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Center delegated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_Date__c</fullName>
        <description>This field is to be used to capture the time a Lead was Converted. 
To be HIDDEN and used in Lead History Reports!</description>
        <formula>ConvertedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>This will show the real created time, if the previous system has created the Lead earlier than in SFDC</description>
        <formula>IF(ISBLANK( Capture_Date_Pre_System__c) , CreatedDate ,Capture_Date_Pre_System__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date/Time, when the lead has been created</inlineHelpText>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will lock the current Lead record and mark it for deletion.
Only your System Administrator will be able to uncheck this field!</inlineHelpText>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field captures the description for the inquiry</description>
        <inlineHelpText>This field captures the description for the inquiry</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_unclean__c</fullName>
        <description>This field is used to capture unclean email addresses populated by CCDv2. Which can transferred later to the original Phone number field</description>
        <inlineHelpText>This field is used to capture unclean email addresses populated by CCDv2. Which can transferred later to the original Phone number field</inlineHelpText>
        <label>Email unclean</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Response_Status__c</fullName>
        <description>This field will give an visual indicator of the time until the Lead should get contacted</description>
        <formula>IF( Hours_remaining_for_First_Response__c &lt;= 0, 
IMAGE(&quot;/resource/GraphicsPack/16/fatcow/farmfresh/exclamation.png&quot;, &quot;red&quot; ),
IF( Hours_remaining_for_First_Response__c &lt;= 12,
IMAGE(&quot;/resource/GraphicsPack/16/fatcow/farmfresh/flag_orange.png&quot;, &quot;orange&quot;),
IMAGE(&quot;/resource/GraphicsPack/16/fatcow/farmfresh/flag_green.png&quot;, &quot;green&quot;)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will give an visual indicator of the time until the Lead should get contacted</inlineHelpText>
        <label>First Response Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Responsed_on__c</fullName>
        <description>This field captures the date and time, when the lead has been set to contacted. This field will be set by a Process (LPB)</description>
        <inlineHelpText>Date/ Time on which the first response was provided</inlineHelpText>
        <label>First Response on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fit__c</fullName>
        <description>Lead Qualification Field (Sales &amp; Marketing)</description>
        <inlineHelpText>Is this opportunity/business attractive for ABB? Does it FIT with the strategy?</inlineHelpText>
        <label>Fit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_CCDv2_Category__c</fullName>
        <description>This field captures the full category tree from CCDv2 down to the most level. Read only on layout</description>
        <inlineHelpText>This field captures the full category tree from CCDv2 down to the most level.</inlineHelpText>
        <label>Full CCDv2 Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName + &quot; &quot; +  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_after_first_response__c</fullName>
        <description>Provides the actual hours after the first response</description>
        <formula>IF(ISBLANK(First_Responsed_on__c),
((NOW()-Created_Date_Time__c) *24),
((First_Responsed_on__c-Created_Date_Time__c) *24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provides the actual hours after the first response</inlineHelpText>
        <label>Time to first response (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_remaining_for_First_Response__c</fullName>
        <description>Formula calculating the remaining time until the first response needs to be done. It has to remain with the actual dateTimeResponded, if this value is filled</description>
        <formula>IF(
IF( ISBLANK(First_Responsed_on__c),
((Created_Date_Time__c + 1.00008)-NOW()) *24,
((Created_Date_Time__c + 1.00008)-First_Responsed_on__c) *24)&lt;0,0,
IF( ISBLANK(First_Responsed_on__c),
((Created_Date_Time__c + 1.00008)-NOW()) *24,
((Created_Date_Time__c + 1.00008)-First_Responsed_on__c) *24)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hours remaining to provide 1st Response
Target = First Response within 24 hours</inlineHelpText>
        <label>Hours remaining to provide 1st Response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_need__c</fullName>
        <description>Lead Qualification Field (Sales &amp; Marketing)</description>
        <inlineHelpText>What problem is the contact/organization trying to solve? Is this an official project or are they purely information gatherers?</inlineHelpText>
        <label>Interest/need</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Age_in_Weeks__c</fullName>
        <description>This field is used in reports on Sales Dashboard</description>
        <formula>CEILING((TODAY() -  DATEVALUE(CreatedDate) )/7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age (in Weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Engagement__c</fullName>
        <description>(only for Sales &amp; Marketing)</description>
        <label>Lead Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field captures the auto number which will be generated by the system. The field is read only on the layout.

The Number is created as follows:
YYYY Year of the current date
MM Month of the current date
DD Day of the current date (08)
&quot;-&quot; a textual Hiphen
XXXXX a 5 digit letter comparable with a flight number</description>
        <inlineHelpText>Lead Inquiry Number</inlineHelpText>
        <label>Lead Number</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Origin__c</fullName>
        <description>This field stores the origin of the lead generated in the system. If generated by sub processes(e.g: CCDv2), the values will be pre populated.</description>
        <inlineHelpText>Shows the origin of the Lead</inlineHelpText>
        <label>Lead Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>Lead Scoring Field (Sales &amp; Marketing)</description>
        <formula>IF (AND (ISPICKVAL( Lead_Engagement__c ,&quot;Medium&quot;), 
         Score_Qualification__c &lt; 4
         ), &quot;WARM&quot;,
              IF (AND (ISPICKVAL( Lead_Engagement__c ,&quot;Medium&quot;), 
                       Score_Qualification__c = 4
                       ), &quot;HOT&quot;, 

IF (AND (ISPICKVAL( Lead_Engagement__c ,&quot;High&quot;), 
         Score_Qualification__c &lt; 2
         ), &quot;WARM&quot;,
              IF (AND (ISPICKVAL( Lead_Engagement__c ,&quot;High&quot;), 
                       Score_Qualification__c &gt; 1
                       ), &quot;HOT&quot;,&quot;COLD&quot;
                  )
    )
                  )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_ID__c</fullName>
        <description>Integration Workstream : R5 : R-2521</description>
        <label>NPS ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Ready__c</fullName>
        <description>Integration Workstream : R5: R-2195</description>
        <formula>If(AND(
       $RecordType.Name = &apos;Contact Center&apos;, ISBLANK(NPS_ID__c), 
       Applicable_for_NPS_Survey__c,
       NOT(ISBLANK(TEXT(Lead_Origin__c))),
       NOT(ISBLANK(Country)),
       NOT(ISBLANK(TEXT( Originating_Country__c ))),
       NOT(ISPICKVAL(Status,&apos;Open&apos;)),
       (NOT(ISBLANK(Related_existing_Contact__c)) || NOT(
            ISBLANK(Email) || ISBLANK(FirstName))

        )
     ),
     true,false
  )</formula>
        <label>NPS Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_End_Date__c</fullName>
        <defaultValue>TODAY() +14</defaultValue>
        <label>NPS Survey End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Reminder_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPS Survey Reminder Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Status__c</fullName>
        <description>Integration Workstream : R5 : R-2517</description>
        <label>NPS Survey Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Country__c</fullName>
        <label>Originating Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius And Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Lead_Source__c</fullName>
        <description>Space for users to elaborate on the lead source, if Other has been selected from the Lead Source picklist field.</description>
        <inlineHelpText>Please complete if Other has been selected as the Lead Source</inlineHelpText>
        <label>Other Lead Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <description>Hold the reason for a lead to be assigned to &quot;Unqualified&quot;</description>
        <inlineHelpText>If Lead Status is set to &quot;Unqualified&quot; and field Unqualifying Reason is set to &quot;Other&quot; this field needs to be filled</inlineHelpText>
        <label>Other Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Country__c</fullName>
        <formula>Owner:User.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Display_Name__c</fullName>
        <description>This formula displays the name in one field, no matter if the record is owned by a queue or a user.</description>
        <formula>IF(ISBLANK( Owner:Queue.QueueName ), 
Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName,
Owner:Queue.QueueName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>User or Queue Name</inlineHelpText>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <formula>IF(ISBLANK(Owner:User.Id),&quot;Queue&quot;,&quot;User&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_reminder__c</fullName>
        <label>Participant reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_captured__c</fullName>
        <description>This is a temporary field capturing the telephone number from CCDv2 as the portal accepts text phrases, which cannot be entered in phone number fields in salesforce.com.</description>
        <inlineHelpText>Phone number captured in CCDv2</inlineHelpText>
        <label>Phone captured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positioning__c</fullName>
        <description>Lead Qualification Field (Sales &amp; Marketing)</description>
        <inlineHelpText>Are we well positioned to GET (win) the opportunity or make business with the contact/organization?</inlineHelpText>
        <label>Positioning</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>